<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:background="@drawable/gradient_background">


    <!--  Logo Num  -->
    <LinearLayout
        android:id="@+id/img_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/container_form_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_num"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_of_app"
            android:src="@drawable/num_logo"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="205dp" />

    </LinearLayout>

    <!--  Login Form  -->
    <LinearLayout
        android:id="@+id/container_form_login"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/rounded_top_corners"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_acc"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />
        <!--    Layout of text input email    -->
        <LinearLayout
            android:id="@+id/layout_input_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="343dp"
                android:layout_height="54dp"
                android:autofillHints="Enter your email"
                android:background="@drawable/edit_text_border"
                android:hint="@string/placeHolder_Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_input_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="343dp"
                android:layout_height="54dp"
                android:autofillHints="Enter your email"
                android:background="@drawable/edit_text_border"
                android:hint="@string/placeHolder_password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16sp" />
        </LinearLayout>
        <!--   Forgot Password     -->
        <LinearLayout
            android:id="@+id/layout_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/forgotPasswordLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="#ff0000"
                android:textStyle="bold" />


        </LinearLayout>

        <!--  Login Button  -->
        <LinearLayout
            android:id="@+id/layout_login_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_cyan"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/login_button"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_signup"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="128dp"
                android:layout_height="2.5dp"
                android:background="#808080" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/sign_up"
                android:textSize="11sp" />

            <View
                android:layout_width="128dp"
                android:layout_height="2.5dp"
                android:background="#808080" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccount_asking"
                android:textColor="#808080"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:text="@string/sign_up_button"
                android:textAlignment="center"
                android:textColor="@color/dark_cyan"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>