<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:background="@drawable/gradient_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_back_icon"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/arrow_back"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            app:tint="@color/white"
            />


    </LinearLayout>


    <!--  Logo Num  -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/img_layout"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/logo_num"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_of_app"
            android:src="@drawable/num_logo"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="205dp"
            />

    </LinearLayout>

    <!--  Login Form  -->
    <LinearLayout
        android:id="@+id/container_form_login"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_marginTop="330dp"
        android:background="@drawable/rounded_top_corners"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password_page"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            />
        <!--  New Password  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/layout_input_newPassword"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <EditText
                android:id="@+id/txt_newPassword"
                android:layout_width="343dp"
                android:layout_height="54dp"
                android:inputType="textPassword"
                android:hint="@string/placeHolder_newPassword"
                android:autofillHints="Enter your email"
                android:background="@drawable/edit_text_border"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!--   Confirm New Password  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/layout_input_password"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <EditText
                android:id="@+id/txt_confirmNewPass"
                android:layout_width="343dp"
                android:layout_height="54dp"
                android:inputType="textPassword"
                android:hint="@string/placeHolder_ConfirmnewPassword"
                android:autofillHints="Enter your email"
                android:background="@drawable/edit_text_border"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!--   Forgot Password     -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/layout_forgot_password"

            />

        <!--  Verify Button  -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/layout_login_button"
            android:gravity="center"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verify"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:text="@string/verify_button"
                android:paddingTop="14dp"
                app:cornerRadius="8dp"
                android:paddingBottom="14dp"
                android:backgroundTint="@color/dark_shade_blue"
                />

        </LinearLayout>
        <!--  Back Button  -->


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>