<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- ProgressBar (Loading Spinner) -->


    <!-- Notification Bars -->
    <LinearLayout
        android:id="@+id/layout_title_home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/num_logo" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            android:text="@string/title"
            android:textColor="#519086"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/notifications_none_24" />
    </LinearLayout>

    <!-- Search Bar -->
    <LinearLayout
        android:id="@+id/layout_searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_title_home_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="54dp"
            android:orientation="horizontal"

            android:background="@drawable/layout_fill_source_home"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180sp"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/baseline_search_24" />
        </LinearLayout>
    </LinearLayout>

    <!-- Trending Section -->
    <LinearLayout
        android:id="@+id/layout_trending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_searchbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:text="@string/trending"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="50dp"
            />

        <TextView
            android:paddingStart="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_trending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <!-- ProgressBar (Loading Spinner) -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"/> <!-- Initially hidden -->
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
