
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentContainer"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:padding="16dp">



        <!-- Notification Bars -->
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_title_home_page"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:id="@+id/layout_title">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24" />




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110sp"
                    android:text="@string/title"
                    android:textColor="#333"
                    android:textSize="14sp"
                    android:textStyle="bold"/>


                    <ImageView
                        android:layout_marginStart="115sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/search_icon"
                        android:src="@drawable/baseline_share_24"
                        android:layout_alignParentStart="true"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/setting"/>

            </LinearLayout>
        </LinearLayout>

        <!--   Content     -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            >

            <ImageView
                android:id="@+id/imageViewimg"
                android:layout_width="364dp"
                android:layout_height="228dp"
                android:adjustViewBounds="true"
                android:background="@android:color/darker_gray"
                android:scaleType="centerCrop"
                android:src="@drawable/news1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/titleTv"
                android:layout_marginTop="50sp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/contentTv"
                android:layout_marginTop="50sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_newsPage"/>
        </LinearLayout>




    </LinearLayout>
</android.widget.ScrollView>











